Remove blazing essence fluid